- Added the ability to add extra principal payments to individual debts - Fixed spacing with the Payoff Plan cards - Deleted old, commented code - Cleaned up the CurrencyFormField to separate out the actual input piece for use by itself

--- a/src/Debt.css
+++ b/src/Debt.css
@@ -37,12 +37,16 @@
     float: right;
 }
 
-.debt .debtValue {
+.card .cardValue {
     color: #000000;
 }
 
-.debt .header .icon {
+.card.debt .header .icon {
     text-align: center;
+}
+
+.card.debt .progress {
+    margin: .5rem 0 0 0 !important;
 }
 
 .modal .header {
